<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gpc_background"
    tools:context=".activities.HomeActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/home_chat_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginBottom="@dimen/button_margin_bottom"
            android:gravity="center_vertical"
            android:text="@string/chat_button"
            android:textColor="@color/chat_text"
            android:fontFamily="sans-serif-medium"
            android:drawableStart="@drawable/ic_chat"
            android:drawablePadding="@dimen/icon_padding_right"
            android:paddingLeft="@dimen/icon_padding_left"
            android:textSize="@dimen/button_text_size"/>
        <Button
            android:id="@+id/home_login_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginBottom="@dimen/button_margin_bottom"
            android:gravity="center_vertical"
            android:text="@string/login_button"
            android:textColor="@color/chat_text"
            android:fontFamily="sans-serif-medium"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="@dimen/icon_padding_right"
            android:paddingLeft="@dimen/icon_padding_left"
            android:textSize="@dimen/button_text_size"/>
        <Button
            android:id="@+id/home_animation_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginBottom="@dimen/button_margin_bottom"
            android:gravity="center_vertical"
            android:text="@string/animation_button"
            android:textColor="@color/chat_text"
            android:fontFamily="sans-serif-medium"
            android:drawableStart="@drawable/ic_animation"
            android:drawablePadding="@dimen/icon_padding_right"
            android:paddingLeft="@dimen/icon_padding_left"
            android:textSize="@dimen/button_text_size"/>

    </LinearLayout>

</RelativeLayout>